--- a/lecture-2-logical-combinators/solution-2.tex
+++ b/lecture-2-logical-combinators/solution-2.tex
@@ -62,7 +62,7 @@ If any $\phi$ is false, then the entire conjunction is false, too.
 \item $(x < 0) \vee (x > 0)$ [Answer: $x \neq 0$.]
 \item $(x = 0) \vee (x > 0)$ [Answer: $x \geq 0$.]
 \item $(x > 0) \vee (x \geq 0)$ [Answer: $x \geq 0$.]
-\item $(x > 3) \vee (x^2 > 9)$ [Answer: $(x > 3) \vee (x > -3) = x^2 > 9$.]
+\item $(x > 3) \vee (x^2 > 9)$ [Answer: $(x > 3) \vee (x < -3) = x^2 > 9$.]
 \end{enumerate}
 
 \section{}
@@ -72,7 +72,7 @@ If any $\phi$ is false, then the entire conjunction is false, too.
 \item $x$ is not equal to 0.
 \item $x$ is greater than or equal to 0.
 \item $x$ is greater than or equal to 0.
-\item $x$ is greater than 3.
+\item $x$ is greater than 3 or less than -3.
 \end{enumerate}
 
 \section{}
